PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Apr 2008, PHP 5.2.6
- Fixed bug #44557 (Crash in imap_setacl when supplied integer as username)
  (Thomas Jarosch)

27 Mar 2008, PHP 5.2.6RC3
- Properly address incomplete multibyte chars inside escapeshellcmd() (Ilia,
  Stefan Esser)
- Fix integer overflow in printf(). (Stas, Maksymilian Aciemowicz)
- Fixed bug #44487 (call_user_method_array issues a warning when throwing
   an exception). (David Soria Parra)
- Fixed bug #44478 (Inconsistent behaviour when assigning new nodes). 
  (Rob, Felipe)
- Fixed bug #44445 (email validator does not handle domains starting/ending 
  with a -). (Ilia)
- Fixed bug #44440 (st_blocks undefined under BeOS). (Felipe)
- Fixed bug #44394 (Last two bytes missing from output). (Felipe)
- Fixed bug #44388 (Crash inside exif_read_data() on invalid images) (Ilia)
- Fixed bug #44373 (PDO_OCI extension compile failed). (Felipe)
- Fixed bug #43677 (Inconsistent behaviour of include_path set with
  php_value). (manuel at mausz dot at)
- Fixed bug #43614 (incorrect processing of numerical string keys of array in 
  arbitrary serialized data). (Dmitriy Buldakov, Felipe)
- Fixed bug #42177 (Warning "array_merge_recursive(): recursion detected" comes 
  again...). (Felipe)
- Fixed bug #41828 (Failing to call RecursiveIteratorIterator::__construct() 
  causes a sefault). (Etienne)

06 Mar 2008, PHP 5.2.6RC2
- Fixed bug #44333 (SEGFAULT when using mysql_pconnect() with client_flags).
  (Felipe)
- Fixed bug #44306 (Better detection of MIPS processors on Windows). (Ilia)
- Fixed bug #44166 (Parameter handling flaw in PDO::getAvailableDrivers()).
  (Ilia)
- Fixed bug #42505 (new sendmail default breaks on Netware platform) 
  (Guenter Knauf)
- Fixed bug #40013 (php_uname() does not return nodename on Netware
  (Guenter Knauf)

27 Feb 2008, PHP 5.2.6RC1